# RLFR

./: .gitignore  README.md  convert_state_dict.py  pyproject.toml  requirements.txt  setup.py
LLaMA-Factory/: requirements.txt  run.sh  run_flow.sh
LLaMA-Factory/examples/train_flow/: llama3_1_8b_flow.yaml  qwen2_5_1.5b_flow.yaml  qwen2_5_7b_flow.yaml  qwen2_5vl_3b_flow.yaml  qwen2_5vl_7b_flow.yaml
LLaMA-Factory/src/llamafactory.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
LLaMA-Factory/src/llamafactory/data/: collator.py  loader.py  mm_plugin.py  parser.py  template.py
LLaMA-Factory/src/llamafactory/extras/: misc.py
LLaMA-Factory/src/llamafactory/hparams/: model_args.py  training_args.py
LLaMA-Factory/src/llamafactory/model/: loader.py  patcher.py
config/: flow_config_3B.json  flow_config_7B.json  generation_config.json
eval/lm_eval/: eval.sh  evaluate_model.py
eval/vlm_eval/: vlmserver_run.sh
eval/vlm_eval/VLMEvalKit/: run.py  run_judge.py
openrlhf/examples/scripts/: reward_func_qwen_instruct.py
openrlhf/openrlhf/cli/: serve_rm.py  train_ppo_ray.py
openrlhf/openrlhf/datasets/: prompts_dataset.py
openrlhf/openrlhf/models/: __init__.py  actor.py  actor_flow.py  loss.py  utils.py
openrlhf/openrlhf/trainer/: ppo_trainer.py
openrlhf/openrlhf/utils/: distributed_util.py  remote_rm_utils.py
openrlhf/scripts/: train_ray_RLFR_lm_llama3.1_8B.sh  train_ray_RLFR_lm_qwen2.5_1.5B.sh  train_ray_RLFR_lm_qwen2.5_7B.sh  train_ray_RLFR_qwen2.5vl_3B.sh  train_ray_RLFR_qwen2.5vl_7B.sh  train_ray_base_lm.sh  train_ray_base_vlm.sh
(+46 files in other folders)
