[project]
name = "rlfr"
version = "0.1.0"
description = "RLFR: Extending Reinforcement Learning for LLMs with Flow Environment"
license = "LICENSE"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch (==2.6.0)",
    "transformers (==4.50.0)",
    "vllm (==0.8.1)",
    "uvicorn (==0.37.0)",
    "diffusers (==0.30.3)",
    "fastapi (==0.118.0)",
    "pydantic (==2.11.9)",
    "pylatexenc (==2.10)",
    "qwen-vl-utils (==0.0.14)",
    "requests (==2.32.5)",
    "vllm-flash-attn (2.6.2)",
    "flash-attn (==2.6.3)",
    "ring-flash-attn (==0.1.8)",
    "tqdm (==4.66.4)",
    "typing-extensions (==4.15.0)",
    "wandb (==0.22.1)",
    "peft (==0.11.1)",
    "numpy (==2.3.3)",
    "latex2sympy2-extended (==1.0.6)",
    "fire (==0.7.0)",
    "pyarrow (==17.0.0)",
    "pyyaml (==6.0.1)",
    "safetensors (==0.6.2)",
    "sympy (==1.13.1)",
    "ray (==2.44.0)",
    "packaging (==25.0)",
    "wheel (==0.45.1)",
    "tensorboard (==2.18.0)",
    "bitsandbytes (==0.45.0)",
    "deepspeed (==0.16.4)",
    "antlr4-python3-runtime (==4.13.2)",
    "flashinfer-python (==0.2.2)",
    "ipdb (>=0.13.13,<0.14.0)",
    "jinja2 (==3.1.4)",
    "math-verify (>=0.8.0,<0.9.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
